# api-auto-acv/openApi.yml
@@ -22,7 +22,7 @@ tags:
   - name: "sourcesEnergie"
     description: "Toute les sources d'energie"
 paths:
-  /users/{username}:
+  /users/name/{username}:
     get:
       tags:
         - "users"
@@ -108,7 +108,7 @@ paths:
                 $ref: '#/components/schemas/getusers'
         "404":
           description: "L'utilisateur n'a pas été trouvé"
-  /users:
+  /users/register:
     post: 
       tags:
         - "users"
@@ -130,6 +130,30 @@ paths:
                 $ref: '#/components/schemas/getusers'
         "400": 
           description: "Un champs essentiels n'est pas présent ou incorrect (username, password, mail)"
+  /users/login:
+    post: 
+      tags:
+        - "users"
+      summary: "connecter un utilisateur"
+      operationId: loginUser
+      requestBody:
+        description: "doit contenir les informations essentiels soit l'username et le password"
+        required: true
+        content:
+          application/json:
+            schema: 
+              $ref: "string"
+      responses:
+        "200":
+          description: "L'utilisateur est connecté"
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/getusers'
+        "400": 
+          description: "Un champs essentiels n'est pas présent ou incorrect (username, password)"
+        "404":
+          description: "L'utilisateur n'a pas été trouvé"  
   /mixsEnergetiques/{country}:
     get: 
       tags:
